force-app/main/default/objects/Inventory__c/fields/Damaged__c.field-meta.xml
<CustomField>
    <fullName>Damaged__c</fullName>
    <label>Damaged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>