force-app/main/default/objects/Inventory__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Location</label>
    <referenceTo>Inventory_Location__c</referenceTo>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>