force-app/main/default/objects/Inventory__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>