force-app/main/default/objects/Inventory__c/fields/On_Hand_Qty__c.field-meta.xml
<CustomField>
    <fullName>On_Hand_Qty__c</fullName>
    <formula>Available__c +  Damaged__c +  Reserved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hand Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>