force-app/main/default/objects/Inventory__c/fields/Reserved__c.field-meta.xml
<CustomField>
    <fullName>Reserved__c</fullName>
    <label>Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>