force-app/main/default/objects/Inventory__c/fields/Stock_High_Level_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Stock_High_Level_Quantity__c</fullName>
    <label>Stock High Level Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>