force-app/main/default/objects/Inventory__c/fields/Target_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Target_Stock_Level__c</fullName>
    <label>Target Stock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>