force-app/main/default/objects/Inventory__c/fields/Transit_In_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Transit_In_Quantity__c</fullName>
    <label>Transit In Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>