force-app/main/default/objects/Inventory__c/fields/Transit_Out_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Transit_Out_Quantity__c</fullName>
    <label>Transit Out Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>