force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>Inventory_Location__c</columns>
    <columns>On_Hand_Qty__c</columns>
    <columns>Available__c</columns>
    <columns>Reserved__c</columns>
    <columns>Damaged__c</columns>
    <columns>Transit_In_Quantity__c</columns>
    <columns>Transit_Out_Quantity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>