force-app/main/default/objects/Inventory__c/listViews/Inventory_Stock_Alerts_Inventory.listView-meta.xml
<ListView>
    <fullName>Inventory_Stock_Alerts_Inventory</fullName>
    <filterScope>Queue</filterScope>
    <label>Inventory Stock Alerts</label>
    <queue>Inventory_Stock_Alerts</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>